<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CompassMethod">

    <TextView
        android:id="@+id/tv_input_geodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InputCommandGeo"
        android:textSize="13pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLatitude"
            android:numeric="decimal"
            android:textSize="12pt"/>

        <TextView
            android:id="@+id/tvComma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/comma"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLongitude"
            android:numeric="decimal"
            android:textSize="12pt"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/height"
        android:numeric="decimal"
        android:textSize="12pt"/>

    <TextView
        android:id="@+id/tv_input_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/InputCommandDistance"
        android:textSize="13pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Distance"
            android:numeric="decimal"
            android:layout_weight="1"
            android:textSize="12pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/comma"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/edit_angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="    Angle    "
            android:numeric="decimal"
            android:layout_weight="1"
            android:textSize="12pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/btn_calculate_new_geodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_gravity="right"
            android:text="@string/calculate"/>

        <Button
            android:id="@+id/btn_apply_new_geodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_marginLeft="80dp"
            android:text="@string/apply"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_result_new_latitude_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/newlatidue"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_result_new_longitude_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/newlongitude"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_result_new_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/comma"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_result_new_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
