<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ConstructionDrawingMethod">

    <TextView
        android:id="@+id/tv_input_start_coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_start_coordinate"
        android:textSize="12pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLatitude"
            android:numeric="decimal"
            android:textSize="12pt"/>

        <EditText
            android:id="@+id/start_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLongitude"
            android:numeric="decimal"
            android:textSize="12pt"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_input_reference_coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/setup_reference_coordinate"
        android:textSize="12pt"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/reference_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLatitude"
            android:numeric="decimal"
            android:textSize="12pt"/>

        <EditText
            android:id="@+id/reference_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputLongitude"
            android:numeric="decimal"
            android:textSize="12pt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_menu_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="onClick"
            android:text="@string/menu_floors"/>
        <TextView
            android:id="@+id/tv_input_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="80dp"
            android:textStyle="bold"
            android:textSize="12pt"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:text="OK"/>
</LinearLayout>