<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.berlin.htw.orinsy.vermessungs_tool.GeoDataList">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_remove_item"
                    android:text="@string/rm_item"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_export_file"
                    android:text="@string/export_to_file"
                    android:onClick="onClick"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_use_as_start_coordinates"
                    android:text="@string/start_coordinates"
                    android:onClick="onClick"/>
            </TableRow>
        </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

    <ListView
        android:id="@+id/lv_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    </ScrollView>

</LinearLayout>
